<resources>
    <string name="app_name">Shoes_store</string>
    <string name="splash_title">Make \nYour Style \nCome \ntrue Here</string>
    <string name="search_text">What Are You Looking For?</string>
    <string name="user_name">apple</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="go">GO</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See All</string>
    <string name="total_price">Total Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="rs_0">RS:0</string>
    <string name="select_color">Select color</string>
    <string name="select_size">Select Size</string>
    <string name="title">Title</string>
    <string name="rating_txt">5.0</string>
    <string name="order_detail">Order Detail</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="check_out">Check Out</string>
    <string name="subtotal">SubTotal</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="rs">RS-</string>
    <string name="total">Total</string>
    <string name="plus">+</string>
    <string name="minus">-</string>">
</resources>