<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/grey_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoes" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feeEachItemTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/feeEachItemTxt"
        app:layout_constraintTop_toBottomOf="@+id/feeEachItemTxt" />

    <TextView
        android:id="@+id/plusBtn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/plus"
        android:background="@drawable/color_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minusBtn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:background="@drawable/color_bg"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/numberItemTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/minusBtn"
        app:layout_constraintEnd_toEndOf="@+id/plusBtn"
        app:layout_constraintStart_toStartOf="@+id/plusBtn"
        app:layout_constraintTop_toBottomOf="@+id/plusBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>